adding test for nopat narrative statement